--- a/codigos/lojinhacss.css
+++ b/codigos/lojinhacss.css
@@ -86,17 +86,24 @@ header
     flex-wrap: wrap;
     gap: 24px;
 }
-.blusa
+.produto
 {
     border-radius: 50px;
     width: 362px;
     height: 362px;
     background-color: #ffffff8e;
 }
+.produto:hover
+{
+    border-radius: 50px;
+    width: 362px;
+    height: 362px;
+    background-color: #ffffff;
+}
 }
 @media (max-width:1399px)
 {
-    .quadradinho
+.quadradinho
 {
     margin-left: auto;
     margin-right: auto;
@@ -105,11 +112,23 @@ header
     flex-wrap: wrap;
     gap: 24px;
 }
-.blusa
+.produto
 {
     border-radius: 50px;
     width: 362px;
     height: 362px;
     background-color: #ffffff8e;
 }
+.produto:hover
+{
+    border-radius: 50px;
+    width: 362px;
+    height: 362px;
+    background-color: #ffffff;
+}
+}
+.produto img
+{
+    max-height:237.24px ;
+    max-width: 239.77;
 }
