--- a/codigos/parceriascss.css
+++ b/codigos/parceriascss.css
@@ -88,14 +88,9 @@ header
 }
 @media (max-width:1199px)
 {
-.divisorias
-{
-    display: flex;
-    flex-direction: column;
-    text-align: justify;
-}
 .container1
 {
+
     width: 100%;
     margin-top: 155px;
     display: flex;
@@ -115,6 +110,14 @@ header
     display: flex;
     flex-direction: column;
     background-color: #8F0B0B;
+}
+.conteudo
+{
+ 
+    width: min-content;
+    margin-left: auto;
+    margin-right: auto; 
+    text-align: center;  
 }
 }
 .sub
